# repo-backup

./: .coverage  .env.example  .github_refresh  .gitignore  .pip-audit-ignore  AWS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_TEMPLATE.md  CONTRIBUTING.md  LICENSE  README.md  install.py  pyproject.toml  uninstall.py
docs/: SEMANTIC-RELEASE.md
scripts/: ci  dev-setup  release
src/: __init__.py  base.py  bitbucket_manager.py  github_manager.py  gitlab_manager.py  local_backup.py  main.py  s3_uploader.py  token_discovery.py
tests/: test_base.py  test_bitbucket_manager.py  test_github_manager.py  test_gitlab_manager.py  test_local_backup.py  test_orchestrator.py  test_s3_uploader.py  test_token_discovery.py
